test/spec_vectors/simd_i64x2_cmp/fail/module_2.wat
(module (func (result v128) (i64x2.ne (i32.const 0) (f32.const 0))))